--- a/found.css
+++ b/found.css
@@ -21,11 +21,7 @@ text-align: center;
 .field:checked ~ .form_label{
   color: rgb(25, 0, 255);
 }
-.radio_d{
-  display: inline;
-  width: 50px;
-  text-align: center;
-}
+
 .button{
   color: brown;
   display: block;
@@ -33,14 +29,13 @@ text-align: center;
   margin-right: auto;
   text-align: center;
 }
-.radio_d{
+.phone{
   display: block;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
+
 .coloe{
   float: right ;
-
-  text-align: end;
 }
