--- a/post_1.css
+++ b/post_1.css
@@ -128,7 +128,7 @@ a:active{
 }
 #toplist:hover{
   color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
 }
 footer:hover{
   color: rgb(0, 0, 0);
@@ -152,6 +152,7 @@ header:hover{
   
 }
 #toplist{
+
   float:right;
   font-size: 4rem;
   text-align: right;
